src/objects/SFDC_Projects__c.object
<CustomObject>
    <description>A professional services engagement that tracks all related Resources and Project details.</description>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Product__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advise_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advise Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advise_Client_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advise Client Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Articles_Received__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Articles Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Articles_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Articles Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asked_client_for_login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked client for login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backed_Up_FTP_or_Databases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backed Up FTP or Databases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMS_Address__c</fullName>
        <label>CMS Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Password__c</fullName>
        <label>CMS Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS_Username__c</fullName>
        <label>CMS Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPanel_Password__c</fullName>
        <label>CPanel Password</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPanel_URL__c</fullName>
        <label>CPanel URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPanel_Username__c</fullName>
        <label>CPanel Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Meta_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Meta Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_First_Ranking_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked First Ranking Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Background__c</fullName>
        <label>Client Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Panel_Password__c</fullName>
        <label>Client Panel Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Panel_Username__c</fullName>
        <label>Client Panel Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Relationship__c</fullName>
        <label>Client Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_1__c</fullName>
        <label>Condition 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_2__c</fullName>
        <label>Condition 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_3_Type__c</fullName>
        <label>Condition 3 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Access &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads &amp; Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_3__c</fullName>
        <label>Condition 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_4_Type__c</fullName>
        <label>Condition 4 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Access &amp; Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads &amp; Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Approved_Sent_to_Web__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Approved Sent to Web</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Back_Waiting_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Back Waiting for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Outsourced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Outsourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Uploaded_to_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Uploaded to Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Contract End Date</description>
        <label>Contract end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Period__c</fullName>
        <label>Contract Period</label>
        <picklist>
            <picklistValues>
                <fullName>6 (+1) Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (+1) Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_start_date__c</fullName>
        <label>Contract start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Google_Web_Master_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Google Web Master Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Site_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Site Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Month_Cost__c</fullName>
        <label>Current Month Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Month_Revenue__c</fullName>
        <label>Current Month Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Created__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Modified__c</fullName>
        <formula>NOW() -  LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Modified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_before_Ready__c</fullName>
        <formula>CASE(MOD( Pending_Project_Info_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Project_Ready_Date__c -  Pending_Project_Info_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Project_Ready_Date__c -  Pending_Project_Info_Date__c)/7)*5)</formula>
        <label>Pending to Ready</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_In_Progress_to_Complete__c</fullName>
        <formula>CASE(MOD( In_progress_Start_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Project_Completed_Date__c - In_progress_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Project_Completed_Date__c - In_progress_Start_Date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from In Progress to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_complete__c</fullName>
        <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
  0 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Project_Completed_Date__c - DATEVALUE(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Project_Completed_Date__c - DATEVALUE(CreatedDate) )/7)*5)</formula>
        <label>Days to complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directories_entered_into__c</fullName>
        <label>Directories entered into</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directory_Password1__c</fullName>
        <label>Directory Password1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Password2__c</fullName>
        <label>Directory Password2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Password3__c</fullName>
        <label>Directory Password3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory__c</fullName>
        <label>Directory Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition</label>
        <picklist>
            <picklistValues>
                <fullName>TE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FTP_Host__c</fullName>
        <label>FTP Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Password__c</fullName>
        <label>FTP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Username__c</fullName>
        <label>FTP Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_Account_Password__c</fullName>
        <label>Facebook Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Account_Username__c</fullName>
        <label>Facebook Account Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Footer Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Account_Password__c</fullName>
        <label>Google Account Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Account_Username__c</fullName>
        <label>Google Account Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Password__c</fullName>
        <label>Google Analytics Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics_Username__c</fullName>
        <label>Google Analytics Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heading_Tag_s_Optimised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heading Tag&apos;s Optimised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_PE_Mkt_Licenses__c</fullName>
        <label>If PE, # Mkt Licenses</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_PE_other_add_ons__c</fullName>
        <label>If PE, other add-ons</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_progress_Start_Date__c</fullName>
        <label>In Progress Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Rank_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Rank Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keywords Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_SEO_Analysis__c</fullName>
        <label>Last SEO Analysis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <label># Licenses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Reports_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly Reports Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_Left__c</fullName>
        <formula>(Contract_End_Date__c - today())/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_10__c</fullName>
        <label>Note 10</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_11__c</fullName>
        <label>Note 11</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_12__c</fullName>
        <label>Note 12</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <label>Notes 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <label>Notes 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_From_Base_Camp__c</fullName>
        <label>Notes From Base Camp</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Keywords_Ranking__c</fullName>
        <label>Number of Keywords Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_travel_expected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite travel expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001HoCjEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outlook_Edition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outlook Edition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFK_PFT_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFK / PFT&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_Project_Info_Date__c</fullName>
        <label>Pending Project Info Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performed_BPR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed BPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_Kickoff_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed Kickoff Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performed Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <color>#FFCC66</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
                <color>#CC0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Completed_Date__c</fullName>
        <label>Project Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Ready_Date__c</fullName>
        <label>Project Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pending 1st Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Project Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Contract - Billing Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Contract - Billing Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under-going Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Closed - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract - Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - New Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Monthly Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Google Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
                <color>#419249</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Web Design</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Web &amp; SEO</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Work Web</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Additional SEO Work</fullName>
                <color>#333399</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directory Listings SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Visibility SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Web Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admob Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+ Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConvertoPages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explainer Videos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <picklist>
            <picklistValues>
                <fullName>Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_to_Completion__c</fullName>
        <formula>CASE(MOD( Project_Ready_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Project_Completed_Date__c   - Project_Ready_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Project_Completed_Date__c   - Project_Ready_Date__c)/7)*5)</formula>
        <label>Ready to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_Questionnaire_back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Questionnaire back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SEO Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEO_Content__c</fullName>
        <label>SEO Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>